force-app/main/default/objects/Transaction__c/fields/Portfolio_Position__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio Position</label>
    <referenceTo>Portfolio_Position__c</referenceTo>
    <relationshipLabel>Transaction</relationshipLabel>
    <relationshipName>Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>